mesa (9.2.0-0~git) UNRELEASED; urgency=low

  * Initial merge to 9.2 branch.
  * Refresh 06_kfreebsd-ftbfs.diff 06_kfreebsd-ftbfs.diff.
  * Require llvm-3.3-dev >= 1:3.3-4 and libelf-dev.

 -- Maarten Lankhorst <maarten.lankhorst@ubuntu.com>  Wed, 14 Aug 2013 13:03:27 +0200

mesa (9.1.6-2) unstable; urgency=low

  * Don't run 'make -j' if DEB_BUILD_OPTIONS doesn't set parallel.  Oops.

 -- Julien Cristau <jcristau@debian.org>  Mon, 12 Aug 2013 08:00:21 +0200

mesa (9.1.6-1) unstable; urgency=low

  [ Andreas Boll ]
  * New upstream release. (Closes: #717410)
  * Cherry-pick commit 0dbbfa0 (mesa: Fix MESA_PATCH version) from
    upstream.

  [ Julien Cristau ]
  * Don't run configure for different builds in parallel.

 -- Julien Cristau <jcristau@debian.org>  Sun, 11 Aug 2013 18:15:58 +0200

mesa (9.1.4-1) unstable; urgency=low

  [ Julien Cristau ]
  * Don't call wayland_buffer_is_drm from libgbm, it's in libEGL
    (closes: #712556).
  * Make sure libgbm doesn't have undefined symbols.

  [ Andreas Boll ]
  * Use dpkg-buildflags.
  * Disable silent rules.
  * Cherry-pick commit 0829b89 (mesa: Fix ieee fp on Alpha) from upstream
    (Fixes FTBFS on alpha)

  [ Timo Aaltonen ]
  * New upstream release.

  [ Julien Cristau ]
  * libegl1-mesa-drivers depends on libgl1-mesa-dri for libllvmradeon
    (closes: #714828)

 -- Julien Cristau <jcristau@debian.org>  Sat, 06 Jul 2013 11:37:34 +0200

mesa (9.1.3-6) unstable; urgency=low

  * Team upload.

  * debian/libegl1-mesa.symbols:
    + More kfreebsd build fixes. Mark some symbols as linux-any.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Fri, 07 Jun 2013 20:27:55 +0200

mesa (9.1.3-5) unstable; urgency=low

  * Team upload.

  [ Andreas Boll ]
  * debian: Don't install libllvmradeon*.so on kfreebsd-*, fixes FTBFS.

  [ Emilio Pozuelo Monfort ]
  * Upload to unstable.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Fri, 07 Jun 2013 14:12:43 +0200

mesa (9.1.3-4) unstable; urgency=low

  * Team upload.
