@@ -11,12 +11,3 @@ index e22c55c..556eb03 100644
  libgbm_la_LIBADD = $(LIBUDEV_LIBS) $(LIBKMS_LIBS) $(DLOPEN_LIBS)
  
  if HAVE_EGL_PLATFORM_WAYLAND
-@@ -39,6 +39,8 @@ libgbm_dri_la_CFLAGS = \
- 
- libgbm_la_LIBADD += \
- 	libgbm_dri.la $(top_builddir)/src/mapi/shared-glapi/libglapi.la
-+
-+libgbm_la_LDFLAGS += $(LIBDRM_LIBS)
- endif
- 
- all-local: libgbm.la
